# sample-ml-repo

./: .gitignore  .kedro.yml  kedro_cli.py  pyproject.toml  readme.md  setup.cfg
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
hooks/: pre-commit-hook-install.sh  pre-commit-hook.sh
samplemlproject/: pipeline.py  run.py
samplemlproject/callbacks/: callback_factories.py  ccmlprojectcallback.py  createcallbacks.py  gitversioncallback.py
samplemlproject/config/: envconfig.py
samplemlproject/datasets/: imagedata.py  imageflowdataset.py  kerasmodeldataset.py
samplemlproject/models/: simplemodel.py
samplemlproject/pipelines/: defaultpipeline.py  testpipeline.py  trainpipeline.py
samplemlproject/pipelines/data_engineering/: README.md  nodes.py  pipeline.py
samplemlproject/pipelines/data_science/: README.md
samplemlproject/procedures/: defaulttest.py  defaulttrain.py
samplemlproject/scripts/: run_production.py
samplemlproject/utilities/: chartutils.py  experimentdata.py  experimentmanager.py  factoryutils.py  gitutils.py  hashutils.py  metricutils.py  predictionutils.py  timeutils.py
samplemlproject/visualization/: train_visu.py
tests/: test_sample_ml_project.py
