[tool.poetry]
name = "sample-ml-project"
version = "0.1.0"
description = ""
authors = ["Denis Stalz-John <denis.stalz-john@codecentric.de>"]

[tool.poetry.dependencies]
python = "3.7"
kedro = "^0.15.9"
python-dotenv = "^0.13.0"
kedro-viz = "^3.2.0"
dvc = "^0.93.0"
tensorflow-cpu = "^2.1.0"
keras = "^2.3.1"
tensorflow-estimator = "2.1.0"
pillow = "^7.1.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
